# 12factor

./: INSTALL  README.md
ext/: Makefile  hiredis.mk
src/: CMakeLists.txt  Makefile
src/include/: log.h
src/libcore/: env.c  signal.c
src/rd/: README.md  main.c  redis.c
src/recd/: README.md
src/restd/: README.md
src/svc1/: Makefile  main.c  redis.c  time.c
src/workd/: README.md
